--- a/index.html
+++ b/index.html
@@ -1575,33 +1575,36 @@
                         </div>
                     </div>
                 )}
-                <div className="p-3 sm:p-4 border-b border-white/5 flex justify-between items-center bg-slate-900 shadow-xl gap-2">
-                    <button onClick={onClose} className="text-slate-400 font-black uppercase text-[10px] hover:text-white transition-all">Lopeta</button>
-                    <div className="text-center font-oswald uppercase font-black italic text-sm sm:text-xl leading-tight min-w-0">
-                        <span className="player-header-name">{players[match.p1]}</span> <span className="text-yellow-500 mx-1 sm:mx-3">{legs[0]} - {legs[1]}</span> <span className="player-header-name">{players[match.p2]}</span>
+                <div className="p-3 sm:p-4 border-b border-white/5 bg-slate-900 shadow-xl">
+                    <div className="grid grid-cols-[auto_minmax(0,1fr)_auto] items-center gap-2">
+                        <button onClick={onClose} className="text-slate-400 font-black uppercase text-[10px] hover:text-white transition-all">Lopeta</button>
+                        <div className="text-center font-oswald uppercase font-black italic text-sm sm:text-xl leading-tight min-w-0">
+                            <span className="player-header-name">{players[match.p1]}</span> <span className="text-yellow-500 mx-1 sm:mx-3">{legs[0]} - {legs[1]}</span> <span className="player-header-name">{players[match.p2]}</span>
+                        </div>
+                        <div className="w-10"></div>
                     </div>
-                    <div className="w-6 sm:w-10"></div>
+                    <div className="grid grid-cols-2 gap-2 mt-2 sm:-mt-9 sm:grid-cols-[1fr_auto_1fr] sm:items-center">
+                        <button
+                            onClick={() => handleForfeit(0)}
+                            disabled={isFinishingMatch}
+                            className={`dart-btn h-8 sm:h-9 text-[10px] sm:text-[11px] uppercase tracking-wide sm:justify-self-start sm:px-3 ${isFinishingMatch ? 'opacity-40 cursor-not-allowed' : 'text-red-300 border-red-500/30 bg-red-500/10 hover:bg-red-500/20'}`}
+                        >
+                            {players[match.p1]} luovuttaa
+                        </button>
+                        <div className="hidden sm:block"></div>
+                        <button
+                            onClick={() => handleForfeit(1)}
+                            disabled={isFinishingMatch}
+                            className={`dart-btn h-8 sm:h-9 text-[10px] sm:text-[11px] uppercase tracking-wide sm:justify-self-end sm:px-3 ${isFinishingMatch ? 'opacity-40 cursor-not-allowed' : 'text-red-300 border-red-500/30 bg-red-500/10 hover:bg-red-500/20'}`}
+                        >
+                            {players[match.p2]} luovuttaa
+                        </button>
+                    </div>
                 </div>
                 <div className="flex-1 flex flex-col p-3 sm:p-4 gap-3 sm:gap-4 max-w-4xl mx-auto w-full min-h-[100svh]">
                     <div className="grid grid-cols-2 gap-4">
                         <div className={`p-3 sm:p-6 rounded-2xl sm:rounded-3xl border-2 sm:border-4 ${(isStarterDrawComplete && turn === 0) ? 'border-yellow-500 bg-yellow-500/10' : 'border-white/5 opacity-30'}`}><div className="text-4xl sm:text-7xl font-mono font-black text-center">{p1Score}</div></div>
                         <div className={`p-3 sm:p-6 rounded-2xl sm:rounded-3xl border-2 sm:border-4 ${(isStarterDrawComplete && turn === 1) ? 'border-yellow-500 bg-yellow-500/10' : 'border-white/5 opacity-30'}`}><div className="text-4xl sm:text-7xl font-mono font-black text-center">{p2Score}</div></div>
-                    </div>
-                    <div className="grid grid-cols-2 gap-3">
-                        <button
-                            onClick={() => handleForfeit(0)}
-                            disabled={isFinishingMatch}
-                            className={`dart-btn h-11 text-xs uppercase tracking-wide ${isFinishingMatch ? 'opacity-40 cursor-not-allowed' : 'text-red-300 border-red-500/30 bg-red-500/10 hover:bg-red-500/20'}`}
-                        >
-                            {players[match.p1]} luovuttaa
-                        </button>
-                        <button
-                            onClick={() => handleForfeit(1)}
-                            disabled={isFinishingMatch}
-                            className={`dart-btn h-11 text-xs uppercase tracking-wide ${isFinishingMatch ? 'opacity-40 cursor-not-allowed' : 'text-red-300 border-red-500/30 bg-red-500/10 hover:bg-red-500/20'}`}
-                        >
-                            {players[match.p2]} luovuttaa
-                        </button>
                     </div>
                     <div className="rounded-2xl border border-yellow-500/35 bg-yellow-500/10 px-4 py-3 text-xs uppercase tracking-wide">
                         <div className="flex items-center justify-between gap-3">
