--- a/index.html
+++ b/index.html
@@ -1583,7 +1583,7 @@
                         </div>
                         <div className="w-10"></div>
                     </div>
-                    <div className="grid grid-cols-2 gap-2 mt-2 sm:-mt-9 sm:grid-cols-[1fr_auto_1fr] sm:items-center">
+                    <div className="grid grid-cols-2 gap-2 mt-2 sm:mt-2 sm:grid-cols-[1fr_auto_1fr] sm:items-center">
                         <button
                             onClick={() => handleForfeit(0)}
                             disabled={isFinishingMatch}
@@ -1662,7 +1662,7 @@
                             </div>
                         )}
                     </div>
-                    <div className="flex flex-col gap-3 mt-auto">
+                    <div className="flex flex-col gap-3 mt-1 sm:mt-2">
                         <div className="grid grid-cols-4 gap-2">
                             <button onClick={() => setMultiplier(2)} className={`dart-btn multiplier-btn ${multiplier === 2 ? 'active' : ''}`}>Tupla</button>
                             <button onClick={() => setMultiplier(3)} className={`dart-btn multiplier-btn ${multiplier === 3 ? 'active' : ''}`}>Tripla</button>
